2009-05-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add FlashCrossDomainPolicy.cs to the build

2009-05-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add new policy-related files to the build

2009-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add policy code and reference to System.Core and
	System.Xml

2009-05-14  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Remove common files from build (they are available
	from other assemblies)

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.Browser.mdp: Add a project for each tool, and
	  clean up some of the existing projects.

2009-03-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Do not install 2.1 in the GAC but in the plugin dir

2009-03-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add security attributes using the linker after the
	raw build (a bit modified patch from JB).

2009-02-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.Browser.mdp: Updated to use new MD features
	  (ChangeLog and log message policy).

2009-02-02  Andreia Gaita  <avidigal@novell.com>

	* System.Windows.Browser.mdp: update
	* Makefile.am: Add ScriptableObjectWrapper to the build

2009-01-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.Browser.mdp: Update.

2008-12-17  Chris Toshok  <toshok@ximian.com>

	* Makefile.am: remove references to Mono.Moonlight.dll

2008-11-28  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* Makefile.am, System.Windows.Browser.mdp: Updated with
	  BrowserHttpWebRequestStream.cs

2008-11-20  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* Makefile.am, System.Windows.Browser.mdp: Corcompare fixes.

2008-09-15  Jb Evain  <jbevain@novell.com>

	* Makefile.am: remove namespace System.Windows.Browser.Serialization
	that has been removed from SL2.

2008-08-17  Chris Toshok  <toshok@ximian.com>

	* Makefile.am: split up the 2.1/3.0 work in automake ifdefs so we