@@ -28,6 +28,7 @@ system_windows_browser_sources =					\
 	$(srcdir)/System.Windows.Browser.Net/BrowserHttpWebResponse.cs		\
 	$(srcdir)/System.Windows.Browser.Net/BrowserHttpWebAsyncResult.cs		\
 	$(srcdir)/System.Windows.Browser.Net/BrowserHttpWebRequestStream.cs		\
+	$(srcdir)/System.Windows.Browser.Net/BaseDomainPolicy.cs		\
 	$(srcdir)/System.Windows.Browser.Net/ClientAccessPolicy.cs		\
 	$(srcdir)/System.Windows.Browser.Net/CrossDomainPolicyManager.cs	\
 	$(srcdir)/System.Windows.Browser.Net/FlashCrossDomainPolicy.cs		\
