@@ -1,3 +1,8 @@
+2009-05-28  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* ClientAccessPolicy.cs: Refactored to use BaseDomainPolicy
+	* FlashCrossDomainPolicy.cs: Refactored to use BaseDomainPolicy
+
 2009-05-28  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* BaseDomainPolicy.cs: New. Shared code between the Silverlight 
